--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -69,7 +69,7 @@ background-size:contain;
   <ion-item-group>
   <!-- <app-banner></app-banner> -->
 </ion-item-group>
-  <ion-item-group>
+  <ion-item-group  >
   <ion-grid class="ion-padding">
     <ion-row>
       <ion-col size="11.5">
@@ -81,18 +81,18 @@ background-size:contain;
         </div>
       </ion-col>
     </ion-row>
-    <!-- <ion-row size ="20">
+    <ion-row size ="20">
       <swiper #bookSwiper [config]="config">
       <ng-template swiperSlide *ngFor="let book of  trendings; index as i">
         <app-product-card [data]="book"></app-product-card>
          <ion-col size="220" *ngFor="let book of  trendings"></ion-col>
       </ng-template>
     </swiper>
-    </ion-row> -->
+    </ion-row>
   </ion-grid>
 </ion-item-group>
 
-<ion-item-group>
+<ion-item-group >
   <ion-grid class="ion-padding">
     <ion-row>
       <ion-col size="11.5">
