--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -40,7 +40,7 @@
                     
                     <div class="">
                       <p>Delivery by Mon Dec 5 | Free</p>
-                      <h5>₹650</h5>
+                      <h5>₹{{cartitem.cost}}</h5>
                       <ion-button (click)="RemoveToCart(cartitem)" class="ion-minus-circled"  fill="outline">Remove</ion-button>
                       <ion-button (click)="decreaseCount(cartitem)">
                         <ion-icon name="remove-circle-outline"></ion-icon>
@@ -65,6 +65,7 @@
           </ion-card>
         </ion-col>
         <ion-col size="4">
+          
           <ion-card>
             <ion-card-header>
               <ion-card-title>Price Details</ion-card-title>
@@ -72,34 +73,26 @@
             <ion-card-content>
               <ion-list>
                 <ion-item lines="none">
-                  <ion-label> SubTotal</ion-label><!--{{ subtotalText }}-->
-                  <p>₹650{{ getTotalCount() | number: '1.2-2' }}</p>
+                  <ion-label>SubTotal</ion-label>
+                  <p>{{ getTotalCount() | number: '1.2-2' }}</p>
                 </ion-item>
-                 <ion-item>
+                <ion-item>
                   <ion-label>Delivery Charges</ion-label>
                   <p>FREE</p>
                 </ion-item>
-
                 <ion-item lines="none">
                   <ion-label>Total Amount</ion-label>
-                  <b>₹{{getTotalAmount()}}</b>
+                  <b>₹{{ getTotalAmount() }}</b>
                 </ion-item>
-
                 <ion-item lines="none">
                   <ion-label>
-                    <ion-button expand="full" color="dark" (click)="onPlaceOrder() ">Place Order</ion-button>
+                    <ion-button expand="full" color="dark" (click)="onPlaceOrder()">Place Order</ion-button>
                   </ion-label>
                 </ion-item>
-
-                <ion-item lines="none">
-                  <!-- <ion-label>
-                    <ion-button expand="full" color="primary" [routerLink]="['/checkout']" [queryParams]="{cartItems: cartitems | json}">Place Order</ion-button>
-                  </ion-label> -->
-                </ion-item>
-                
               </ion-list>
             </ion-card-content>
           </ion-card>
+          
         </ion-col>
       </ion-row>
       </ion-toolbar>
