--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -97,6 +97,19 @@
 span.rupee-symbol {
   color: red;
 }
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: red;
+}
+ion-card{
+  border: none !important;
+  box-shadow:none !important
+}
+
+  
 
 @media (max-width:20px){
   .card-body{
