--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -58,13 +58,10 @@
                 <h3>India</h3>
               </ion-select-option>
             </ion-select>
-            
-
-            
           </div>
           </div>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <ion-searchbar show-clear-button="always" clear-icon="trash-bin" value="Seach Books" color="light" shape="rectangle"></ion-searchbar>
+      <ion-searchbar (click)="onNavigate('/search')" show-clear-button="always" clear-icon="trash-bin" value="Seach Books" color="light" shape="rectangle"></ion-searchbar>
       </div>
     </ion-col>
 
@@ -164,8 +161,13 @@
     <ion-segment-button  routerLink="/order" value="Orders">
       Orders
     </ion-segment-button>
-    <ion-segment-button  routerLink="/author-details" value="Author">
-      author
+    
+    <ion-segment-button  routerLink="author/:id" value="Author">
+      author 
     </ion-segment-button>
+    <ion-segment-button  routerLink="author-details/:id" value="Author  deatils">
+      author deatils
+    </ion-segment-button>
+    
   </ion-segment>
 </ion-toolbar>
