--- a/src/app/pages/account/address/address.page.html
+++ b/src/app/pages/account/address/address.page.html
@@ -35,9 +35,10 @@
                 </ion-button>
                 <ion-button expand="block" color="dark" fill="clear" class="w-100" disabled>|</ion-button>
 
-                <ion-button expand="block" color="dark" fill="clear" class="w-100" [routerLink]="['/address',(address)]">
-                  Edit
+                <ion-button expand="block" color="dark" fill="clear" class="w-100" (click)="editAddress(address)">
+                  Edit 
                 </ion-button>
+                
               </div>
             </ion-item>
           </ion-list>
