--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -31,10 +31,10 @@
           <a routerLink="/account/wishlist">Wishlist </a>
         </li>
         <li>
-          <a routerLink="/account">Terms & Conditions</a>
+          <a routerLink="/terms-condition">Terms & Conditions</a>
         </li>
         <li>
-          <a routerLink="/account">Privacy Policy</a>
+          <a routerLink="/privacy-policy">Privacy Policy</a>
         </li>
       </ul>
       </div>
