--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,4 +1,5 @@
 <header>
+  
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
@@ -19,28 +20,21 @@
 />
 </header>
 
+
 <ion-toolbar class="ion-toolbar">
   <ion-row>
     <ion-col size="7" class="my-auto">
       <div class="d-flex justify-content-right">
-        <img class="ion-padding-horizontal my-auto" src="assets/img/logo.png" alt=" "height="50"width="100"routerLink="/"
+        <img class="ion-padding-horizontal my-auto" src="assets/img/logo.png" alt=" "height="35"width="100" routerLink="/"
          />
          <div class="d-flex delivery-location my-auto pt-1 pe-2">
               <ion-button fill="clear" color="dark">   <ion-icon name="location"></ion-icon>Location</ion-button>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span id="city"></span>
+
+
             <div>
-            <!-- <ion-select class="fi fi-in" color="dark" width="20px" height="60px">
-              <ion-select-option class="fi fi-in"><h3> India <ion-label class="fi-fi-in"></ion-label></h3></ion-select-option>
-              
-              <ion-select-option class="fi fi-us"><h3> United Stated of Amerca</h3></ion-select-option>
-              <ion-select-option class="fi fi-ca"><h3> Canada </h3></ion-select-option>
-              <ion-select-option class="fi fi-in" selected><h3> India </h3></ion-select-option>
-
-            </ion-select> -->
-
-
-
-            <ion-select class="fi fi-in" color="dark" width="20px" height="60px">
+               <ion-select class="fi fi-in" color="dark" width="20px" height="60px">
               <ion-select-option class="fi fi-in">
                 <ion-icon class="fi fi-in" slot="start"></ion-icon>
                 <h3>India</h3>
@@ -99,12 +93,20 @@
           </ion-content>
         </ng-template>
       </ion-popover>
-      <ion-button  fill="clear" color="dark" routerLink="/cart/3434">
+      <ion-button  fill="clear" color="dark" routerLink="/cart/:id">
         <ion-icon slot="start" name="cart"></ion-icon>
         <ion-badge  value=cartQty name=quantity slot="start" color="danger" Data-Badge size="medium"></ion-badge>
        
       </ion-button>
-     
+      
+<!-- 
+      <ion-button fill="clear" color="dark" routerLink="/cart">
+        <ion-icon slot="start" name="cart"></ion-icon>
+        <ion-badge value=cartQty name=quantity slot="start" color="danger" Data-Badge size="medium">{{ cartitems.length }}</ion-badge>
+      </ion-button> --> 
+      
+
+      
       
       <ion-button fill="clear" color="dark" (click)="onLogout()" >
         <ion-icon slot="start" name="Logout"></ion-icon>
@@ -116,11 +118,7 @@
         <ion-icon slot="start" name="notifications"></ion-icon>
         <ion-badge slot="start" color="danger" Data-Badge siz="medium">4</ion-badge>
       </ion-button>
-      <ion-toggle class="toggle" (ionChange)="onThemeChange($event)"[checked]="true" color="light"></ion-toggle>
-
-      <style>
-
-      </style>
+      <ion-toggle class="toggles" (ionChange)="onThemeChange($event)"[checked]="true" color="light"></ion-toggle>
     </ion-col>
   </ion-row>
 </ion-toolbar>
@@ -168,6 +166,7 @@
     <ion-segment-button  routerLink="author-details/:id" value="Author  deatils">
       author deatils
     </ion-segment-button>
-    
   </ion-segment>
 </ion-toolbar>
+<head>
+</head>
