author, author-details,new changes

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,3 @@
-
 <ion-content class="auth-page">
   <ion-grid class="h-100 auth-page_main ion-no-padding">
     <ion-row class="h-100 ion-align-items-center">
@@ -21,8 +20,8 @@
 
           <!-- Social Login -->
           <ion-col class="ion-padding-vertical" size="12">
-            <!-- <app-google-auth></app-google-auth> -->
-            <!-- <app-fb-auth></app-fb-auth> -->
+             <app-google-auth></app-google-auth> 
+             <!-- <app-fb-auth></app-fb-auth>  -->
           </ion-col>
 
           <ion-col class="ion-padding-vertical" size="12">
