--- a/src/app/pages/author/author.component.scss
+++ b/src/app/pages/author/author.component.scss
@@ -282,11 +282,11 @@ ion-card {
     }
   }
   
-  .card .user .imgB img {
-    animation-name: pulse;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-  }
+  // .card .user .imgB img {
+  //   animation-name: pulse;
+  //   animation-duration: 2s;
+  //   animation-iteration-count: infinite;
+  // }
 
  
 
