--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -61,13 +61,10 @@ background-blend-mode: darken;
 background-size:contain;
 }
  </style>
-
-
-
-</ion-header>
+ </ion-header>
 <ion-content [fullscreen]="false">
   <ion-item-group>
-  <!-- <app-banner></app-banner> -->
+  <!-- <app-banner></app-banner>s -->
 </ion-item-group>
   <ion-item-group  >
   <ion-grid class="ion-padding">
