--- a/src/app/auth/forgot-pwd/forgot-pwd.page.html
+++ b/src/app/auth/forgot-pwd/forgot-pwd.page.html
@@ -27,7 +27,7 @@
       <!-- Signup -->
       <ion-col class="signup-link ion-no-padding ion-no-margin" size="12">
         <p class="fs-12">
-          Not registered yet? <ion-text class="pointer" color="secondary" routerLink="/signup"> Create an Account
+          Not registered yet? <ion-text class="pointer" color="secondary"  routerLink="/auth/signup"> Create an Account
           </ion-text>
         </p>
       </ion-col>
