--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,5 +1,4 @@
-<header>
-  
+    <header>
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
@@ -8,7 +7,7 @@
   <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
-  />
+/>
   <!--notification-->
   <link
     rel="stylesheet"
@@ -31,8 +30,6 @@
               <ion-button fill="clear" color="dark">   <ion-icon name="location"></ion-icon>Location</ion-button>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span id="city"></span>
-
-
             <div>
                <ion-select class="fi fi-in" color="dark" width="20px" height="60px">
               <ion-select-option class="fi fi-in">
@@ -61,13 +58,11 @@
 
 
     <ion-col size="5" class="my-auto ion-text-end list">
-      <!-- <app-login></app-login> -->
-      <!-- <app-auth></app-auth> -->
+       <!-- <app-login></app-login> -->
+       <!-- <app-auth></app-auth>  -->
       <ion-button fill="clear" routerLink="/auth" color="dark">login</ion-button>
 
-      <ion-button fill="clear" id="popover-button" color="dark"
-        >Vinoth</ion-button
-      >
+      <ion-button fill="clear" id="popover-button" color="dark">Vinoth</ion-button>
       <ion-popover trigger="popover-button" [dismissOnSelect]="true">
         <ng-template>
           <ion-content>
@@ -96,18 +91,8 @@
       <ion-button  fill="clear" color="dark" routerLink="/cart/:id">
         <ion-icon slot="start" name="cart"></ion-icon>
         <ion-badge  value=cartQty name=quantity slot="start" color="danger" Data-Badge size="medium"></ion-badge>
-       
       </ion-button>
-      
-<!-- 
-      <ion-button fill="clear" color="dark" routerLink="/cart">
-        <ion-icon slot="start" name="cart"></ion-icon>
-        <ion-badge value=cartQty name=quantity slot="start" color="danger" Data-Badge size="medium">{{ cartitems.length }}</ion-badge>
-      </ion-button> --> 
-      
 
-      
-      
       <ion-button fill="clear" color="dark" (click)="onLogout()" >
         <ion-icon slot="start" name="Logout"></ion-icon>
         Logout
