--- a/src/app/layout/topbar/topbar.component.scss
+++ b/src/app/layout/topbar/topbar.component.scss
@@ -77,7 +77,14 @@
 #check{
   display: none;
 }
+.top{
+  display: flex;
+  padding: 10px;
+}
+ion-content{
+  background-color: gray;
 
+}
 @media (max-width:700px){
   .box{
     flex-basis: auto;
