--- a/src/app/pages/author/author.component.html
+++ b/src/app/pages/author/author.component.html
@@ -66,7 +66,7 @@
                 </a>
               </li>
               <li style="--clr:#ff8c00;--i:0;">
-                <a routerLink="/author-details/:{{authors.authorId}}" >
+                <a routerLink="/author-details/{{authors.authorId}}" >
                 <div class="iconB">
                   <i class="fa-solid fa-user"></i>
                 </div>
